added input shits

--- a/game.html
+++ b/game.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<!-- <meta name="viewport" content="width=device-width, initial-scale=0.4, maximum-scale=0.4, user-scalable=no" /> -->
 
 <title>andrej adventure</title>
 <style type="text/css">
@@ -17,20 +16,16 @@ body {
 	background-color: #000000;
 }
 textarea:focus, input:focus{
-	font-size: 40px;
     outline: none;
 }
-input[type='text'],
-input[type='number'],
+input,
 textarea {
-  font-size: 40px;
-}
-@media screen and (-webkit-min-device-pixel-ratio:0) { 
-  select,
-  textarea,
-  input {
-    font-size: 40px;
-  }
+	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 40px;
+	background-color: #000000;
+	color: #00ff00;
 }
 </style>
 <script src="js/jquery-1.11.2.min.js"></script>
