--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body {
 	background-color: #000000;
 }
 </style>
+<script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/modemizr.js"></script>
 </head>
 
@@ -27,7 +28,7 @@ body {
 <script>
 $( document ).ready(function() {
 	$("#intro").html("<h1>andrej adventure</h1>you are a sales representative for AWS.<br>you must sell andrej a new exciting amazon product.<br><a href=\"game.html\">click here to play</a><br>");
-	$("intro").modemizr();
+	$("#intro").modemizr();
 });
 </script>
 </body>
